--- a/meetings/Oct16.tex
+++ b/meetings/Oct16.tex
@@ -49,7 +49,8 @@ work I've done.  Then we'll talk about how to proceed.
   \begin{description}
   \item[Models:] Must allow the number of targets to vary over time
   \item[Algorithms:] Want complexity to go as sum of cluster
-    complexities not product of cluster complexities
+    complexities not product of cluster complexities.  Tag plausible
+    errors.
   \item[Data:] To work with Albuquerque data
   \item[Analysis:] Understand performance cost of non-optimal
     algorithms
