--- a/model.tex
+++ b/model.tex
@@ -2,7 +2,7 @@
 
 \usepackage{amsmath,amsfonts}
 \usepackage{graphicx}
-\usepackage{showlabels}
+%\usepackage{showlabels}
 
 \newcommand{\normal}[2]{{\cal N}(#1,#2)}
 \newcommand{\NormalE}[3]{{\mathcal{N}}\left.\left(#1,#2\right)\right|_{#3}}
@@ -90,32 +90,6 @@ of states $ \ts{\hat s}{\tau}{1}{T}$ from a sequence of observations $
   & \text{for } t \text{ from } T-1 \text{ to } 1: \\
   & \quad \ti{\hat s}{t} = B( \ti{\hat s}{t+1},t)
 \end{align*}
-
-\subsection*{Filtering}
-\label{sec:filtering}
-
-With the definitions
-\begin{align}
-  \label{def:alpha}
-  \alpha_t &\equiv P(\ti{s}{t}|\ts{y}{\tau}{1}{t}) \text{ The updated distribution} \\
-  f_t &\equiv P(\ti{s}{t}|\ts{y}{\tau}{1}{t-1}) \text{ The forecast
-    distribution} \\
-  \gamma_t &\equiv P(\ti{y}{t}|\ts{y}{\tau}{1}{t-1}) \text{ The
-    incremental likelihood}
-\end{align}
-and applying a model characterized by the distributions
-\begin{align}
-  \label{def:alpha0}
-  &\alpha_0  &&\text{The state prior} \\
-  &P(\ti{s}{t+t}|\ti{s}{t}) &&\text{The state transition probability} \\
-  &P(\ti{y}{t}|\ti{s}{t}) &&\text{The conditional observation probability}
-\end{align}
-I can write recursive filtering as follows:
-\begin{align}
-  f_t &= \EV{\alpha_{t-1}} {P(\ti{s}{t}|\ti{s}{t-1})} \\
-  \gamma_t &= \EV{\ti{f}{t}} {P(\ti{y}{t}|\ti{s}{t})} \\
-  \alpha_t &= \frac{f_t P(\ti{y}{t}|\ti{s}{t})}{\gamma_t} \\
-\end{align}
 
 \section{Model Version One}
 \label{sec:model1}
@@ -377,95 +351,6 @@ I have implemented an algorithm around the following recursion step:
   M,k,t))$
 \end{verse}
 
-
-
-
-\subsection{Filtering}
-\label{sec:filter1}
-
-With luck (I have not been so lucky with this application) one might
-find a parametric form for the state prior $\alpha(0)$ (see
-Eqn.~\eqref{def:alpha0}) that, combined with $\ti{y}{1}$, yields an
-expression for $\alpha(1)$ that has the same parametric form.  Such a
-form is called a \emph{conjugate family}.  Two particularly simple
-cases are discrete hidden Markov models and Kalman filters.
-
-Here, I will analyze the use of a Gaussian for $\alpha(0)$.  From that
-choice it follows that each subsequent $\ti{\alpha}{t}$ is much more
-complex.  Thus any actual implementation that starts with such an
-$\alpha(0)$ must use simplifying approximations.  I will conclude the
-section by considering a few such approximations.
-
-Let me suppose that the initial state distribution is composed of
-independent Gaussians, ie,
-\begin{align*}
-  \ti{\alpha}{0} &= P_{\os{S}{0,j}{j=1}{N} }\\
-  &= \prod_{j=1}^{N} P_{\ti{S}{0,j}} \\
-  &= \prod_{j=1}^{N} \normal{\mu_j}{\Sigma_j}.
-\end{align*}
-To find the forecast $\ti{f}{1}$, I can apply the state dynamics
-\eqref{eq:dynamics} to each object independently with the result
-\begin{align}
-  \tilde \mu_j &= A \mu_j \\
-  \tilde \Sigma_j &= A \Sigma_j A\transpose + \Sigma_D \\
-  \label{eq:defF}
-  (\tilde \mu_j, \tilde \Sigma_j ) &\equiv F(\mu_j,\Sigma_j) \\
-  \label{eq:f1}
-  \ti{f}{1} &= \prod_{j=1}^{N} {\cal N}(F(\mu_j,\Sigma_j)),
-\end{align}
-where Eqn.~\eqref{eq:defF} defines the map $F$ from a distribution at
-time $t$ to a distribution at time $t+1$.  Note that like
-$\ti{\alpha}{0}$, $\ti{f}{1}$ is simply Gaussian.  On the other hand
-\begin{equation}
-  \label{eq:a1}
-  a(1) \equiv f(1) P_{y|S} = \frac{1}{\left| \M \right|} \sum_{M \in \M}
-  \prod_{i=1}^N P(y(t,M(i)|s(t,i)) \cdot \left. {\cal
-      N}(F(\mu_j,\Sigma_j))\right|_{s_i}
-\end{equation}
-which provides an unnormalized version of the updated distribution
-$\alpha(1)$ has at least two unfortunate properties:
-\begin{enumerate}
-\item The distribution of states is a sum of $\left| \M \right|$
-  Gaussians.  If you want to track $N=100$ objects, $\alpha(1)$ will
-  have $\left| \M \right| = N! \approx 10^{156}$ terms.
-\item For each term in the sum, the distributions of the separate
-  objects $s_j$ are independent, but that independence property does
-  not hold for the sum.  So it is not true that
-  \begin{equation*}
-    P(s(1)|y(1)) = \prod_{j=1}^N  P\left( \left( s(1,j) \right)|y(1)
-    \right).
-  \end{equation*}
-\end{enumerate}
-
-Leveraging the notational clarity of \eqref{eq:a1}, I can also write
-\begin{align*}
-  \ti{\alpha}{T} \propto \sum_{\os{M}{t}{t=1}{T}:\ti{M}{t}\in \M}
-  \prod_{i=1}^N& \left[
-  P\left( \os{y}{\ti{M}{t,i}}{t=1}{T} | \os{s}{t,i}{t=1}{T}\right) \right. \\
-  & \left. P\left( \os{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right)
-  P\left( \ti{s}{0,i} \right) \right] .
-\end{align*}
-Since
-\begin{equation*}
-  P\left( \os{y}{\ti{M}{t,i}}{t=1}{T} | \os{s}{t,i}{t=1}{T}\right) =
-  \prod_{t=1}^T P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
-\end{equation*}
-and
-\begin{equation*}
-  P\left( \os{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right) = \prod_{t=1}^T
-  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right),
-\end{equation*}
-\begin{equation}
-  \label{eq:alphaT}
-  \ti{\alpha}{T} \propto \sum_{\os{M}{t}{t=1}{T}}
-  \prod_{i=1}^N  P\left( \ti{s}{0,i} \right) \prod_{t=1}^T
-  P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
-  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right).
-\end{equation}
-Like \eqref{eq:a1} \eqref{eq:alphaT} is a mixture of Gaussians.  The
-number of components in the mixture $\left| \ts{M}{t}{1}{T}\right| =
-(N!)^T$ is absurdly large.
-
 \section{Model Version Two: Variable Visibility}
 \label{sec:model2}
 
@@ -550,13 +435,18 @@ This model, \emph{MVIII}, generates hits like MVII except that in
 addition it generates noise hits or \emph{false alarms}.  The false
 alarms are drawn from the initial $y$ distribution
 $(\normal{\mu_0}{\Sigma_0})$ and the number of hits is drawn from a
-Poisson distribution with expected value $\lambda$.  Thus the
-probability density of $y$ given that it is a false alarm is
+Poisson distribution with expected value $\lambda$.  The number of
+false alarms, $N_{\text{FA}}$, is a characteristic of a state or
+association, ie, $s \equiv (N_{\text{FA}},M,\bx)$ and
+\begin{equation}
+  \label{eq:2}
+  P(\ti{s}{t+1}|\ti{s}{t},\ti{M}{t+1},\ti{\bx}{t+1}) =
+  \frac{e^{-\lambda}\lambda^{N_{\text{FA}}}}{N_{\text{FA}}!}.
+\end{equation}
+And the probability density of $y$ given that it is a false alarm is
 \begin{equation*}
-  P(y|\text{FA}) = \lambda \NormalE{\mu_0}{\Sigma_0}{y}.
+  P(y|\text{FA}) = \NormalE{\mu_0}{\Sigma_0}{y}.
 \end{equation*}
-
-\marginpar{Separate state probability from observation probability.}
 For decoding, if you attribute the observations $y_1^{N_{\text{FA}}}$
 to false alarms at time $t$, add $\sum_k^{N_{\text{FA}}}
 \log(P(y_k|\text{FA}))$ and $\log \left(
@@ -568,23 +458,23 @@ the value of $\nu$.
 \label{sec:model4}
 
 \emph{MVIV} creates $N_{\text{new}}$ new targets at each time step.
-We use a Poisson distribution with a small mean to model
-$N_{\text{new}}$; at most times there are no new states.  We draw the
-positions and velocities of the new states from the same distribution
-for initial states.
+$N_{\text{new}}$ has a Poisson distribution with a small mean; at most
+times there are no new states.  The positions and velocities of the
+new states have the same distribution as initial states.  I assume
+that new states are visible when they arise to avoid carrying many
+invisible states for decoding.
 
-\marginpar{Separate state probability from observation probability.}
-For decoding, if you attribute the observations $y_1^{N_{\text{new}}}$
-to new targets at time $t$, add $\sum_k^{N_{\text{new}}}
-\log(P(y_k|\text{new}))$ and $\log \left(
+In the decoding algorithm, the cost of attributing the observations
+$y_1^{N_{\text{new}}}$ to new targets at time $t$ is the addition of
+$\sum_k^{N_{\text{new}}} \log(P(y_k|\text{new}))$ and $\log \left(
   \frac{e^{-\lambda}\lambda^{N_{\text{new}}}}{N_{\text{new}}!}\right)$
 to the value of $\nu$.
 
 While it would be simpler to treat false alarms and new targets with
 the same model mechanism, since new targets will frequently arise at
-edges while false alarms will happen in other areas more frequently,
-I expect better performance by using separate mechanisms to the two
-kinds of events.
+edges while false alarms will happen in other areas more frequently, I
+expect better performance by using separate mechanisms to model the
+two kinds of events.
 
 \appendix
 \section{Derivation of Formulas for Decoding the Trajectory of a Single Object}
@@ -732,6 +622,128 @@ separately, I find
   \Sigma_y^{-1}(OA\mu_t)
 \end{align*}
 Equation~\eqref{eq:new_R} follows pretty easily.
+
+\section{Filtering}
+\label{sec:filtering}
+
+In this appendix I have two subsections that I wrote before I
+realized that filtering is inappropriate for tracking.  In
+\ref{sec:filtering1} I give a general recursive algorithm for filtering
+for any state space model.  In \ref{sec:filter2} I discuss the
+difficulty of filtering for the model of Section~\ref{sec:model1}
+
+
+\subsection{General Filtering}
+\label{sec:filtering1}
+
+With the definitions
+\begin{align}
+  \label{def:alpha}
+  \alpha_t &\equiv P(\ti{s}{t}|\ts{y}{\tau}{1}{t}) \text{ The updated distribution} \\
+  f_t &\equiv P(\ti{s}{t}|\ts{y}{\tau}{1}{t-1}) \text{ The forecast
+    distribution} \\
+  \gamma_t &\equiv P(\ti{y}{t}|\ts{y}{\tau}{1}{t-1}) \text{ The
+    incremental likelihood}
+\end{align}
+and applying a model characterized by the distributions
+\begin{align}
+  \label{def:alpha0}
+  &\alpha_0  &&\text{The state prior} \\
+  &P(\ti{s}{t+t}|\ti{s}{t}) &&\text{The state transition probability} \\
+  &P(\ti{y}{t}|\ti{s}{t}) &&\text{The conditional observation probability}
+\end{align}
+I can write recursive filtering as follows:
+\begin{align}
+  f_t &= \EV{\alpha_{t-1}} {P(\ti{s}{t}|\ti{s}{t-1})} \\
+  \gamma_t &= \EV{\ti{f}{t}} {P(\ti{y}{t}|\ti{s}{t})} \\
+  \alpha_t &= \frac{f_t P(\ti{y}{t}|\ti{s}{t})}{\gamma_t} \\
+\end{align}
+
+\subsection{Filtering for Model One}
+\label{sec:filter2}
+
+With luck (I have not been so lucky with this application) one might
+find a parametric form for the state prior $\alpha(0)$ (see
+Eqn.~\eqref{def:alpha0}) that, combined with $\ti{y}{1}$, yields an
+expression for $\alpha(1)$ that has the same parametric form.  Such a
+form is called a \emph{conjugate family}.  Two particularly simple
+cases are discrete hidden Markov models and Kalman filters.
+
+Here, I will analyze the use of a Gaussian for $\alpha(0)$.  From that
+choice it follows that each subsequent $\ti{\alpha}{t}$ is much more
+complex.  Thus any actual implementation that starts with such an
+$\alpha(0)$ must use simplifying approximations.  I will conclude the
+section by considering a few such approximations.
+
+Let me suppose that the initial state distribution is composed of
+independent Gaussians, ie,
+\begin{align*}
+  \ti{\alpha}{0} &= P_{\os{S}{0,j}{j=1}{N} }\\
+  &= \prod_{j=1}^{N} P_{\ti{S}{0,j}} \\
+  &= \prod_{j=1}^{N} \normal{\mu_j}{\Sigma_j}.
+\end{align*}
+To find the forecast $\ti{f}{1}$, I can apply the state dynamics
+\eqref{eq:dynamics} to each object independently with the result
+\begin{align}
+  \tilde \mu_j &= A \mu_j \\
+  \tilde \Sigma_j &= A \Sigma_j A\transpose + \Sigma_D \\
+  \label{eq:defF}
+  (\tilde \mu_j, \tilde \Sigma_j ) &\equiv F(\mu_j,\Sigma_j) \\
+  \label{eq:f1}
+  \ti{f}{1} &= \prod_{j=1}^{N} {\cal N}(F(\mu_j,\Sigma_j)),
+\end{align}
+where Eqn.~\eqref{eq:defF} defines the map $F$ from a distribution at
+time $t$ to a distribution at time $t+1$.  Note that like
+$\ti{\alpha}{0}$, $\ti{f}{1}$ is simply Gaussian.  On the other hand
+\begin{equation}
+  \label{eq:a1}
+  a(1) \equiv f(1) P_{y|S} = \frac{1}{\left| \M \right|} \sum_{M \in \M}
+  \prod_{i=1}^N P(y(t,M(i)|s(t,i)) \cdot \left. {\cal
+      N}(F(\mu_j,\Sigma_j))\right|_{s_i}
+\end{equation}
+which provides an unnormalized version of the updated distribution
+$\alpha(1)$ has at least two unfortunate properties:
+\begin{enumerate}
+\item The distribution of states is a sum of $\left| \M \right|$
+  Gaussians.  If you want to track $N=100$ objects, $\alpha(1)$ will
+  have $\left| \M \right| = N! \approx 10^{156}$ terms.
+\item For each term in the sum, the distributions of the separate
+  objects $s_j$ are independent, but that independence property does
+  not hold for the sum.  So it is not true that
+  \begin{equation*}
+    P(s(1)|y(1)) = \prod_{j=1}^N  P\left( \left( s(1,j) \right)|y(1)
+    \right).
+  \end{equation*}
+\end{enumerate}
+
+Leveraging the notational clarity of \eqref{eq:a1}, I can also write
+\begin{align*}
+  \ti{\alpha}{T} \propto \sum_{\os{M}{t}{t=1}{T}:\ti{M}{t}\in \M}
+  \prod_{i=1}^N& \left[
+  P\left( \os{y}{\ti{M}{t,i}}{t=1}{T} | \os{s}{t,i}{t=1}{T}\right) \right. \\
+  & \left. P\left( \os{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right)
+  P\left( \ti{s}{0,i} \right) \right] .
+\end{align*}
+Since
+\begin{equation*}
+  P\left( \os{y}{\ti{M}{t,i}}{t=1}{T} | \os{s}{t,i}{t=1}{T}\right) =
+  \prod_{t=1}^T P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
+\end{equation*}
+and
+\begin{equation*}
+  P\left( \os{s}{t,i}{t=1}{T}| \ti{s}{0,i} \right) = \prod_{t=1}^T
+  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right),
+\end{equation*}
+\begin{equation}
+  \label{eq:alphaT}
+  \ti{\alpha}{T} \propto \sum_{\os{M}{t}{t=1}{T}}
+  \prod_{i=1}^N  P\left( \ti{s}{0,i} \right) \prod_{t=1}^T
+  P\left( \ti{y}{t,\ti{M}{t,i}} | \ti{s}{t,i}\right)
+  P\left( \ti{s}{t,i} | \ti{s}{t-1,i}\right).
+\end{equation}
+Like \eqref{eq:a1} \eqref{eq:alphaT} is a mixture of Gaussians.  The
+number of components in the mixture $\left| \ts{M}{t}{1}{T}\right| =
+(N!)^T$ is absurdly large.
 
 \vfill \hrule To checkout: \emph{ svn --username you --password yours
   co svn://fraserphysics.com/ps}
