used xcircuit to draw analogy for Hungarian algorithm

--- a/model.tex
+++ b/model.tex
@@ -933,6 +933,11 @@ Like \eqref{eq:a1} \eqref{eq:alphaT} is a mixture of Gaussians.  The
 number of components in the mixture $\left| \ts{M}{t}{1}{T}\right| =
 (N!)^T$ is absurdly large.
 
+\newpage
+\parbox{1\textwidth}{\center{Title}\\
+    \resizebox{.95\textwidth}{!}{\includegraphics{ha.png}}\vspace{1cm}\\
+    \resizebox{.95\textwidth}{!}{\includegraphics{ha.png}}
+  }
 \vfill \hrule To checkout: \emph{ svn --username you --password yours
   co svn://fraserphysics.com/ps}
 \begin{verbatim}
